# cuteradio-apps

./: .gitignore  BottomBar.qml  CMakeLists.txt  Info.plist  Qt5CMakeToolchainConfig.cmake  README.md  main.cpp  main.qml
CuteRadio/: BottomBar.qml  CuteRadio.pro  main.qml  qml.qrc
cmake/: raspberry-pi3b-toolchain.cmake
